// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardMedia /> should render 1`] = `
<section
  className="mdc-card__media"
>
  <img
    src="http://google.com/image.jpeg"
  />
</section>
`;

exports[`<CardMedia /> should render with children 1`] = `
<section
  className="mdc-card__media"
>
  Text
</section>
`;
